[gd_scene format=3 uid="uid://pause_menu_spirefall"]

[ext_resource type="Script" path="res://scripts/ui/PauseMenu.gd" id="1"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
script = ExtResource("1")

[node name="Dimmer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2
custom_minimum_size = Vector2(320, 332)

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="SpacerTop" type="Control" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 8)

[node name="TitleLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Paused"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 32

[node name="SpacerMid" type="Control" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 8)

[node name="ResumeButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 44)
size_flags_horizontal = 4
text = "Resume"

[node name="RestartButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 44)
size_flags_horizontal = 4
text = "Restart"

[node name="SettingsButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 44)
size_flags_horizontal = 4
text = "Settings"

[node name="CodexButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 44)
size_flags_horizontal = 4
text = "Codex"

[node name="QuitButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 44)
size_flags_horizontal = 4
text = "Quit to Menu"

[node name="SpacerBottom" type="Control" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 8)
